style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&family=Roboto:wght@400;500&display=swap');

*, *::before, *::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}


:root {
  --body-copy: 1rem;
  --h1: 3rem;
  --h2: 2.25rem;
  --h3: 1.875rem;
  --h4: 1.5rem;
  --h5: 1.25rem;
  --h6: 1.125rem;
  --mobile-h1: 2rem;
  --mobile-h2: 1.75rem;
  --mobile-h3: 1.5rem;
  --mobile-h4: 1.25rem;
  --mobile-h5: 1.125rem;
  --mobile-h6: 1rem;
  --line-height: 1.6;
  --mobile-line-hight: 1.5;
  --primary-color:#31343A;
  --secondary-color: #00E0E0;
  --tertiary-color: #f8f8f8;
}

body {
  font-size: var(--body-copy);
  font-family: "Roboto Slab", "sans-serif", "serif";
  background-color: var(--secondary-color);
  color: var(--tertiary-color);
  margin-left: 32px;
  margin-right: 32px;
  overflow-x: hidden;
}

.container {
  max-width: 1440px;
}

header.hero {
  background-color: var(--primary-color);
  padding: 24px;
  border-radius: 16px;
  border-bottom-left-radius: 16px;
  border-bottom-right-radius: 16px;
  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
}

nav {
  height: 56px;
  max-width: 1200px;
  margin: auto;
  z-index: 15;
  position: sticky;
  display: flex;
  justify-content: space-between;
  align-items: center;
  border: solid 2px var(--secondary-color);
  border-radius: 8px;
  background-color: var(--primary-color);
}

nav p {
  margin-left: 16px;
}

nav ul {
  height: 100%;
  width: 60%;
  display: flex;
  align-items: center;
}

nav ul li {
  justify-content: center;
  width: 25%;
  height: 100%;
  border-left: 2px solid var(--secondary-color);
  display: flex;
  align-items: center;
}

input:focus, input:active {
  outline: 0;
}

li {
  list-style: none;
}

a:visited, a {
  cursor: pointer;
  text-decoration: none;
  color: white;
}


h1,h2,h3 {
  text-align: center;
  font-family: Roboto, "sans-serif";
  text-transform: uppercase;
}

h1 {
  font-size: var(--h1);
  font-weight: 900;
  font-style: italic;
  width: 50%;
  margin: 64px auto;
}

h2 {
  margin-bottom: 24px;
  margin-top: 24px;
}

.about-blurb {
  max-width: 900px;
  margin: auto;
  display: flex;
  gap: 32px;
  margin-bottom: 64px;
}

.about-blurb p {
  line-height: var(--line-height);
  border: solid 2px var(--secondary-color);
  padding: 16px;
  border-radius: 8px;
}

main {
  background-color: var(--primary-color);
  margin-top: 8px;
  margin-bottom: 8px;
  border-radius: 16px;
  padding: 16px;
  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;

}


article {
  border: solid 2px var(--secondary-color);
  border-radius: 8px;
  padding: 16px;
  display: flex;
  flex-direction: column;
  gap: 32px;


  header {
    display: flex;
    justify-content: space-between;
  }

  section {
    display: flex;
    justify-content: space-between;
    align-items: end;
     p.job-description {
      width: 80%;
      line-height: var(--line-height);
    }
  }

}

footer {
  background-color: var(--primary-color);
  padding: 16px;
  border-radius: 16px;

  form {
    max-width: 400px;
    margin: auto;
    display: flex;
    flex-direction: column;

    input {
      height: 40px;
      margin-top: 4px;
      margin-bottom: 16px;
      border-radius: 8px;
      border: none;
    }

    textarea {
      margin-top: 4px;
      height: 64px;
      margin-bottom: 24px;
      border-radius: 8px;
      border: none;
      resize: none;
    }

    textarea:focus {
      outline: none;
    }

    button {
      height: 40px;
      border-radius: 8px;
      border: none;
    }

  }

  .copyright-socials {
    font-size: 12px;
    margin-top: 48px;
    display: flex;
    flex-direction: column;
    p {
      text-align: center;
    }

    .socials {
      display: flex;
      justify-content: center;
    }

  }

}

/* ---- Extra Large Devices */
@media (min-width: 1025px)  {
  article {
    max-width: 64%;
    margin: auto;
  }
}


/* ----- Large Devices ---- */
@media (min-width: 769px) and (max-width: 1024px) {
  article {
    width: 90%;
    margin: auto;
  }
}


@media (min-width: 481px) and (max-width: 768px) {
  .about-blurb {
    display: flex;
    flex-direction: column-reverse;
  }

 article  { 
  header {
    display: flex;
    flex-direction: column;
    gap: 8px;
    margin-bottom: 16px;

    h3 {
      font-size: var(--mobile-h3);
      margin-bottom: 8px;
      text-align: left;
    }
  }

  section {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100%;
  }

  section p.job-description {
    width: 100%;
    margin-bottom: 32px;
  }
}


  


}

@media (min-width: 481px) {
  nav {
    top: 0;
  }
}

/* -------- mobile --------*/

@media (max-width: 480px) {

  body {
    margin-left: 16px;
    margin-right: 16px;
  }

  header.hero {
    padding: 16px;
    border-bottom-left-radius: 16px;
    border-bottom-right-radius: 16px;
  }

  h1 {
    font-size: var(--mobile-h1);
    text-align: center;
    margin-top: 32px;
    margin-bottom: 16px;
  }

  .about-blurb {
    display: flex;
    flex-direction: column-reverse;
    gap: 16px;
  }

  .about-blurb p {
    line-height: var(--mobile-line-hight);
  }

  nav {
    bottom: 0;
    left: 0;
    right: 0;
    position: fixed;
    display: flex;
    border-top-right-radius: 8px;
    border-top-left-radius: 8px;
    border-top: solid 2px var(--secondary-color);
    background-color: var(--primary-color);
  }

  nav p {
    display: none;
  }

  nav ul {
    width: 100%;
    display: flex;
    justify-content: space-evenly;
  }

  nav ul li {
    display: flex;
    align-items: center;
  }



  main {

    h2 {
      font-size: var(--mobile-h2);
    }

    article {

      header {
        display: flex;
        flex-direction: column;
        gap: 8px;
        margin-bottom: 16px;

        h3 {
          font-size: var(--mobile-h3);
          margin-bottom: 8px;
          text-align: left;
        }
      }

      section {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        width: 100%;
      }

      section p.job-description {
        line-height: var(--mobile-line-hight);
        margin-bottom: 32px;
      }

      p.read-more {
        text-align: center;
      }
    }
  }

  footer {

    h2 {
      margin-top: 16px;
      margin-bottom: 16px;
    }

    form {


      input {
        height: 40px;
        margin-top: 4px;
        margin-bottom: 8px;
      }

      textarea {
        margin-top: 4px;
        height: 56px;
        margin-bottom: 8px;
      }

      button {
        height: 40px;
      }


    }

    .copyright-socials {
      font-size: 12px;
      margin-top: 48px;
      margin-bottom: 88px;
      display: flex;
      flex-direction: column;

      p {
        text-align: center;
      }

      .socials {
        display: flex;
        justify-content: center;
      }
    }

  }

}

